# esp-idf-projects

./: .gitignore  CMakeLists.txt  sdkconfig
core/: CMakeLists.txt
core/inc/: dht.h
core/inc/core/: dht.h  esp_idf_lib_helpers.h
core/src/: dht.c
main/: CMakeLists.txt  main.c
